# tarus

./: .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
lsp-server/: Cargo.toml
lsp-server/src/: bindings_reader.rs  bindings_reader_v2.rs  command_syntax.json  config.rs  config_reader.rs  constants.rs  file_processor.rs  indexer.rs  initialization.rs  lib.rs  main.rs  parser_backend.rs  parser_frontend.rs  rust_attr.rs  rust_type_extractor.rs  scanner.rs  syntax.rs  tree_parser.rs  ts_tree_utils.rs  typegen.rs  utils.rs
lsp-server/src/capabilities/: code_actions.rs  code_lens.rs  commands.rs  completion.rs  definition.rs  diagnostics.rs  hover.rs  mod.rs  references.rs  symbols.rs
lsp-server/src/indexer/: cache.rs  generators.rs  lens.rs  mod.rs  position.rs  reports.rs  schemas.rs  symbols.rs  types.rs
lsp-server/src/queries/: bindings_interfaces.scm  bindings_specta_commands.scm  rust.scm  (+10 more)
lsp-server/tests/: bindings_reader_tests.rs  code_action_tests.rs  code_actions_tests.rs  code_lens_tests.rs  common_fixtures.rs  common_paths.rs  completion_tests.rs  config_reader_tests.rs  deep_type_checking_tests.rs  definition_tests.rs  diagnostics_tests.rs  finding_builder_tests.rs  handler_tests.rs  helpers.rs  hover_tests.rs  indexer_cache_tests.rs  indexer_tests.rs  integration_tests.rs  parse_tests.rs  parser_tests.rs  query_helpers_tests.rs  references_tests.rs  rust_type_extractor_tests.rs  smoke_tests.rs  symbols_tests.rs  syntax_tests.rs  typegen_tests.rs  utf16_tests.rs  utils_tests.rs
(+65 files in other folders)
