[package]
name = "lsp-server"
version = "0.2.1"
edition = "2021"

[dependencies]
syn = { version = "2.0.110", features = ["full", "visit", "extra-traits"] }
oxc = { version = "*", features = ["full"] }
quote = "1.0.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
dashmap = "6.1.0"
tower-lsp-server = "0.22.1"
