[package]
name = "lsp-server"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
dashmap = "6.1.0"
tower-lsp-server = "0.22.1"

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
streaming-iterator = "0.1"
