[package]
name = "lsp-server"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5.0"
dashmap = "6.1.0"
tower-lsp-server = "0.23.0"
lsp-types = "0.97.0"

# Tree-sitter
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3.25.0"
